--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "next": "^14.2.18",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
