--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.15",
     "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "next": "^14.2.18",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.5.4"
